--- a/Spring-simple-project/src/main/resources/application.properties
+++ b/Spring-simple-project/src/main/resources/application.properties
@@ -1,1 +1,7 @@
-
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.OracleDialect
+spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
+spring.datasource.url=jdbc:oracle:thin:@localhost:1521:xe
+spring.datasource.username=mohsen
+spring.datasource.password=mohsen123
