--- a/Spring-simple-project/src/main/resources/application.properties
+++ b/Spring-simple-project/src/main/resources/application.properties
@@ -1,7 +1,8 @@
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.OracleDialect
 spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
 spring.datasource.url=jdbc:oracle:thin:@localhost:1521:xe
 spring.datasource.username=mohsen
 spring.datasource.password=mohsen123
+server.error.include-message=always
