--- a/Spring-simple-project/src/main/resources/application.properties
+++ b/Spring-simple-project/src/main/resources/application.properties
@@ -6,3 +6,7 @@ spring.datasource.url=jdbc:oracle:thin:@localhost:1521:xe
 spring.datasource.username=mohsen
 spring.datasource.password=mohsen123
 server.error.include-message=always
+email.required=Email is required
+password.required=Password is required
+
+
